Fixed Alignment issue at impact section HP1

--- a/style.css
+++ b/style.css
@@ -896,7 +896,7 @@
  .stories {
      max-width: 1200px;
      margin: 0 auto;
-     padding: 20px;
+     /* padding: 20px;  */
  }
 
  .section-header {
